<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/layoutPadding"
    android:paddingRight="@dimen/layoutPadding"
    android:layoutDirection="ltr">

    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/verticalLayout"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/hello"
            android:text="@string/title"
            android:textSize="@dimen/titleTextSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/verticalLayout"
        android:layout_weight="3"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/verticalLayout"
            android:layout_weight="1"
            android:id="@+id/userEmail">
            <EditText
                android:background="@color/cardview_light_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/inputTextSize"
                android:ems="10"
                android:drawableStart="@drawable/email_black_24dp"
                android:drawablePadding="@dimen/iconInputPading"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="@dimen/verticalLayout"
            android:layout_weight="1"
            app:passwordToggleEnabled="true"
            android:id="@+id/userPassword">
            <EditText
                android:background="@color/cardview_light_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/inputTextSize"
                android:drawableStart="@drawable/key_black_24dp"
                android:drawablePadding="@dimen/iconInputPading"
                android:ems="10"
                android:hint="@string/passwordHint"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginButton"
            android:textAllCaps="true">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/newAccountLayout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/verticalLayout"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/suggestionMarginTop"
            android:text="@string/question"
            android:textSize="@dimen/suggestionTextSize" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:layout_marginTop="@dimen/suggestionMarginTop"
            android:text="@string/suggestion"
            android:textSize="@dimen/suggestionTextSize" />

    </LinearLayout>
</LinearLayout>